[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/themes/fonts/large.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/ui/menus/choose-mode/ChooseMode.gd" type="Script" id=3]

[node name="ChooseMode" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 109.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 578.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 2 )
text = "SchoolBoyBattle"

[node name="ButtonSetPseudo" type="Button" parent="HBoxContainer"]
margin_left = 919.0
margin_top = 9.0
margin_right = 1280.0
margin_bottom = 99.0
size_flags_horizontal = 10
size_flags_vertical = 4
text = "Pseudonyme"

[node name="GridContainer" type="HBoxContainer" parent="."]
margin_top = 129.0
margin_right = 1280.0
margin_bottom = 610.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer"]
margin_right = 436.0
margin_bottom = 481.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.53

[node name="Label" type="Label" parent="GridContainer/VBoxContainer"]
margin_right = 436.0
margin_bottom = 143.0
text = "Choisissez votre mode de jeu"
autowrap = true

[node name="VBoxContainer2" type="VBoxContainer" parent="GridContainer"]
margin_left = 456.0
margin_right = 1280.0
margin_bottom = 481.0
size_flags_horizontal = 3

[node name="ButtonLocal" type="Button" parent="GridContainer/VBoxContainer2"]
margin_right = 824.0
margin_bottom = 90.0
size_flags_horizontal = 3
text = "RÃ©seau local"

[node name="ButtonSolo" type="Button" parent="GridContainer/VBoxContainer2"]
margin_top = 110.0
margin_right = 824.0
margin_bottom = 200.0
size_flags_horizontal = 3
disabled = true
text = "Solo"

[node name="ButtonMulti" type="Button" parent="GridContainer/VBoxContainer2"]
margin_top = 220.0
margin_right = 824.0
margin_bottom = 310.0
size_flags_horizontal = 3
disabled = true
text = "Multijoueur"

[node name="ButtonBack" type="Button" parent="."]
margin_top = 630.0
margin_right = 235.0
margin_bottom = 720.0
size_flags_horizontal = 0
text = "Retour"

[connection signal="pressed" from="HBoxContainer/ButtonSetPseudo" to="." method="_on_ButtonSetPseudo_pressed"]
[connection signal="pressed" from="GridContainer/VBoxContainer2/ButtonLocal" to="." method="_on_ButtonLocal_pressed"]
[connection signal="pressed" from="ButtonBack" to="." method="_on_ButtonBack_pressed"]
